Fixed bug #25 : Wrong height for sidebar

--- a/styles/main.css
+++ b/styles/main.css
@@ -58,7 +58,7 @@ a
 {
     position: relative;
     width: 300px;
-    height: 600px;
+    height: 100%;
     float: right;
     margin-top: -20px;
     margin-right: -330px;
